--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     />
     <meta name="author" content="Mikaela Joelsen" />
     <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/css/menu.css" />
+    <link rel="stylesheet" href="/css/about.css" />
     <link rel="stylesheet" href="/css/footer.css" />
     <link
       rel="stylesheet"
@@ -36,32 +36,55 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <script type="module" defer src="/js/menu.js"></script>
-    <script type="module" defer src="/js/blog.js"></script>
     <!-- TODO: Import Javascript -->
-    <title>Blog for foodies</title>
+    <title>Contact Page</title>
   </head>
   <body class="animate__animated animate__fadeIn">
     <header class="l-header">
-      <h1 class="title">BLOG FOR FOODIES</h1>
+      <h1 class="title">ABOUT PAGE</h1>
       <div class="main-list">
         <nav>
           <ul>
-            <li><a href="blog.html">Recipes</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="#">Recipes</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="index.html">Home Page</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main class="l-main">
       <hr class="line" />
-      <ul class="list-products">
-        <li class="list-item"><a href="#">Dessert</a></li>
-        <li class="list-item"><a href="#">Pasta</a></li>
-        <li class="list-item"><a href="#">Chicken</a></li>
-        <li class="list-item"><a href="#">Dinner</a></li>
-        <li class="list-item"><a href="#">Breakfast/Brunch</a></li>
-      </ul>
+      <h2>ABOUT OUR BLOG</h2>
+      <div class="about-info">
+        <p>
+          Welcome to my food blog, where I share my love for cooking and all
+          things food-related. My name is Mikaela, and I am passionate about
+          creating delicious, healthy meals that nourish both the body and the
+          soul. In this blog, you will find a variety of recipes that range from
+          classic comfort foods to more exotic dishes inspired by my travels
+          around the world.
+        </p>
+        <p>
+          Whether you're a seasoned chef or a beginner in the kitchen, there is
+          something for everyone to enjoy here. One of my favorite things about
+          cooking is the ability to experiment with different ingredients and
+          flavors. I am always on the lookout for new and interesting
+          ingredients to incorporate into my recipes, and I love sharing my
+          discoveries with my readers.
+        </p>
+        <p>
+          In addition to sharing recipes, I also like to provide tips and tricks
+          for making cooking easier and more enjoyable. From kitchen hacks to
+          meal planning advice, I hope to help my readers become more confident
+          and skilled cooks. Of course, no food blog would be complete without
+          beautiful food photography. I take great pride in styling and
+          photographing my dishes to make them as visually appealing as they are
+          delicious. So whether you're looking for a new recipe to try out, or
+          simply want to drool over some mouth-watering food photography, I
+          invite you to join me on my culinary journey. Thank you for visiting,
+          and happy cooking!
+        </p>
+      </div>
     </main>
     <footer>
       <h2>NewsLetter</h2>
@@ -77,7 +100,7 @@
       </div>
       <ul class="list-footer">
         <li class="list-item"><a href="#">Services</a></li>
-        <li class="list-item"><a href="about.html">About</a></li>
+        <li class="list-item"><a href="#">About</a></li>
         <li class="list-item"><a href="#">Terms</a></li>
         <li class="list-item"><a href="#">Privacy Policy</a></li>
       </ul>
