--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
     />
     <meta name="author" content="Mikaela Joelsen" />
     <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/css/menu.css" />
+    <link rel="stylesheet" href="/css/about.css" />
     <link rel="stylesheet" href="/css/footer.css" />
     <link
       rel="stylesheet"
@@ -36,32 +36,30 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <script type="module" defer src="/js/menu.js"></script>
-    <script type="module" defer src="/js/blog.js"></script>
     <!-- TODO: Import Javascript -->
-    <title>Blog for foodies</title>
+    <title>Contact Page</title>
   </head>
   <body class="animate__animated animate__fadeIn">
     <header class="l-header">
-      <h1 class="title">BLOG FOR FOODIES</h1>
+      <h1 class="title">BLOG POSTS</h1>
       <div class="main-list">
         <nav>
           <ul>
-            <li><a href="blog.html">Recipes</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="#">Recipes</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="index.html">Home Page</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main class="l-main">
-      <hr class="line" />
-      <ul class="list-products">
-        <li class="list-item"><a href="#">Dessert</a></li>
-        <li class="list-item"><a href="#">Pasta</a></li>
-        <li class="list-item"><a href="#">Chicken</a></li>
-        <li class="list-item"><a href="#">Dinner</a></li>
-        <li class="list-item"><a href="#">Breakfast/Brunch</a></li>
-      </ul>
+      <div class="results" id="js-results">
+        <div class="loader"></div>
+      </div>
+      <div class="blog-page">
+        <a href="index.html">Go back</a>
+      </div>
+      <section class="card-section" id="card-container"></section>
     </main>
     <footer>
       <h2>NewsLetter</h2>
@@ -77,7 +75,7 @@
       </div>
       <ul class="list-footer">
         <li class="list-item"><a href="#">Services</a></li>
-        <li class="list-item"><a href="about.html">About</a></li>
+        <li class="list-item"><a href="#">About</a></li>
         <li class="list-item"><a href="#">Terms</a></li>
         <li class="list-item"><a href="#">Privacy Policy</a></li>
       </ul>
