--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/css/menu.css" />
     <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/carousel.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
@@ -62,6 +63,26 @@
         <li class="list-item"><a href="#">Dinner</a></li>
         <li class="list-item"><a href="#">Breakfast/Brunch</a></li>
       </ul>
+      <section class="recipes">
+        <h2 class="latest-posts">Latest Posts</h2>
+        <button class="pre-btn"><img src="/assets/arrow.png" alt="" /></button>
+        <button class="next-btn"><img src="/assets/arrow.png" alt="" /></button>
+        <div class="recipe-container">
+          <div class="recipe-card">
+            <div class="recipe-image">
+              <img src="./assets/brownie.jpg" class="recipe-img" alt="" />
+              <button class="recipe-btn">Click here for recipe</button>
+            </div>
+            <div class="recipe-info">
+              <h2 class="recipe-name">Fudge Brownies</h2>
+              <p class="recipe-description">
+                Here’s a recipe for fudge brownies that are rich, decadent, and
+                delicious
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <h2>NewsLetter</h2>
