--- a/contact.html
+++ b/contact.html
@@ -107,12 +107,7 @@
               required
             ></textarea>
 
-            <button
-              class="btn btn-primary send-button"
-              id="submit"
-              type="submit"
-              value="SEND"
-            >
+            <button class="send-button" id="submit" type="submit" value="SEND">
               <div class="alt-send-button">
                 <i class="fa fa-paper-plane"></i
                 ><span class="send-text">SEND</span>
