--- a/index.html
+++ b/index.html
@@ -53,8 +53,6 @@
           </ul>
         </nav>
       </div>
-    </header>
-    <main class="l-main">
       <hr class="line" />
       <ul class="list-products">
         <li class="list-item"><a href="#">Dessert</a></li>
@@ -63,26 +61,10 @@
         <li class="list-item"><a href="#">Dinner</a></li>
         <li class="list-item"><a href="#">Breakfast/Brunch</a></li>
       </ul>
-      <section class="recipes">
-        <h2 class="latest-posts">Latest Posts</h2>
-        <button class="pre-btn"><img src="/assets/arrow.png" alt="" /></button>
-        <button class="next-btn"><img src="/assets/arrow.png" alt="" /></button>
-        <div class="recipe-container">
-          <div class="recipe-card">
-            <div class="recipe-image">
-              <img src="./assets/brownie.jpg" class="recipe-img" alt="" />
-              <button class="recipe-btn">Click here for recipe</button>
-            </div>
-            <div class="recipe-info">
-              <h2 class="recipe-name">Fudge Brownies</h2>
-              <p class="recipe-description">
-                Here’s a recipe for fudge brownies that are rich, decadent, and
-                delicious
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
+    </header>
+    <main class="l-main">
+      <h1 class="header-main">Latest Recipes</h1>
+      <hr class="line-main" />
     </main>
     <footer>
       <h2>NewsLetter</h2>
