added cards and images to the homepage

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script type="module" defer src="/js/menu.js"></script>
+    <script type="module" defer src="/js/contact.js"></script>
     <!-- TODO: Import Javascript -->
     <title>Contact Page</title>
   </head>
@@ -46,7 +46,7 @@
         <nav>
           <ul>
             <li><a href="#">Recipes</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="index.html">Home Page</a></li>
           </ul>
         </nav>
@@ -55,7 +55,7 @@
     <main class="l-main">
       <hr class="line" />
       <section id="contact-page">
-        <div class="contact-wrapper">
+        <div class="contact-box">
           <form id="contact-form" class="form-horizontal" role="form">
             <div class="form-group">
               <div class="col-sm-12">
