--- a/blog.html
+++ b/blog.html
@@ -58,10 +58,12 @@
       <div class="results" id="js-results">
         <div class="loader"></div>
       </div>
-      <div class="blog-page">
+      <div class="back-button">
         <a href="index.html">Go back</a>
       </div>
-      <section class="card-section" id="card-container"></section>
+      <h1>My latest Blogposts</h1>
+      <hr class="line-main" />
+      <section class="blog-section" id="blog-container"></section>
     </main>
     <footer>
       <h2>NewsLetter</h2>
