--- a/details.html
+++ b/details.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Major+Mono+Display&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="_REPLACE_WITH_DESCRIPTION_" />
     <meta
@@ -10,12 +14,37 @@
       content="HTML, CSS, JavaScript, _REPLACE_WITH_KEYWORD_"
     />
     <meta name="author" content="_YOUR_NAME_" />
+    <link rel="stylesheet" href="/css/about.css" />
     <link rel="stylesheet" href="/css/details.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
     <script type="module" defer src="/js/details.js"></script>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Rainy Days</title>
   </head>
   <body>
+    <header class="l-header">
+      <h1 class="title">RECIPE</h1>
+      <div class="main-list">
+        <nav>
+          <ul>
+            <li><a href="#">Recipes</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="index.html">Home Page</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main>
       <div class="results" id="results"></div>
       <div class="back-button">
@@ -25,5 +54,25 @@
         <div class="loader"></div>
       </div>
     </main>
+    <footer>
+      <h2>NewsLetter</h2>
+      <form class="email" action="">
+        <input type="Email" placeholder="Email..." required />
+        <button type="submit">Submit</button>
+      </form>
+      <div class="social">
+        <a href="#"><i class="icon ion-social-instagram"></i></a
+        ><a href="#"><i class="icon ion-social-snapchat"></i></a
+        ><a href="#"><i class="icon ion-social-twitter"></i></a
+        ><a href="#"><i class="icon ion-social-facebook"></i></a>
+      </div>
+      <ul class="list-footer">
+        <li class="list-item"><a href="#">Services</a></li>
+        <li class="list-item"><a href="#">About</a></li>
+        <li class="list-item"><a href="#">Terms</a></li>
+        <li class="list-item"><a href="#">Privacy Policy</a></li>
+      </ul>
+      <small>Created with ❤️ by Mikaela Joelsen</small>
+    </footer>
   </body>
 </html>
