--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/css/menu.css" />
     <link rel="stylesheet" href="/css/footer.css" />
-    <link rel="stylesheet" href="/css/carousel.css" />
+    <link rel="stylesheet" href="/css/slider.css" />
+    <link rel="stylesheet" href="/css/cards2.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
@@ -36,9 +37,47 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Abril+Fatface"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    ></script>
     <script type="module" defer src="/js/menu.js"></script>
     <script type="module" defer src="/js/blog.js"></script>
-    <!-- TODO: Import Javascript -->
+    <script type="module" defer src="/js/slider.js"></script>
+
     <title>Blog for foodies</title>
   </head>
   <body class="animate__animated animate__fadeIn">
@@ -65,6 +104,107 @@
     <main class="l-main">
       <h1 class="header-main">Latest Recipes</h1>
       <hr class="line-main" />
+      <div class="all-cards">
+        <div class="recipe-card">
+          <img src="assets/bruschetta.jpg" alt="" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Bruscetta</h2>
+            <div class="star-rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+            <p>This is delicious and simple bruschetta recipe</p>
+            <a href="">View the Recipe</a>
+          </div>
+        </div>
+
+        <div class="recipe-card">
+          <img src="assets/brownie.jpg" alt="" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Brownie</h2>
+            <div class="star-rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+            <p>This is delicious and simple brownie recipe</p>
+            <a href="">View the Recipe</a>
+          </div>
+        </div>
+
+        <div class="recipe-card">
+          <img src="assets/chicken-soup.jpg" alt="" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Chicken Soup</h2>
+            <div class="star-rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+            <p>This is delicious and simple chicken soup recipe</p>
+            <a href="">View the Recipe</a>
+          </div>
+        </div>
+
+        <div class="recipe-card">
+          <img src="assets/club-sandwich.jpg" alt="" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Club Sandwich</h2>
+            <div class="star-rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+            <p>This is delicious and simple club-sandwich recipe</p>
+            <a href="">View the Recipe</a>
+          </div>
+        </div>
+
+        <div class="recipe-card">
+          <img src="assets/fried-chicken.jpg" alt="" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Fried Chicken</h2>
+            <div class="star-rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+            <p>This is delicious and simple fried chicken recipe</p>
+            <a href="">View the Recipe</a>
+          </div>
+        </div>
+
+        <div class="recipe-card">
+          <img src="assets/hamburger.jpg" alt="" />
+          <div class="recipe-info">
+            <h2 class="recipe-title">Hamburger</h2>
+            <div class="star-rating">
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
+            </div>
+            <p>This is delicious and simple hamburger recipe</p>
+            <a href="">View the Recipe</a>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="collage-img">
+        <img src="/assets/Group 62.png" />
+      </div>
     </main>
     <footer>
       <h2>NewsLetter</h2>
