added card-slider to home page

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     />
     <script type="module" defer src="/js/menu.js"></script>
     <!-- TODO: Import Javascript -->
-    <title>Contact Page</title>
+    <title>About Page</title>
   </head>
   <body class="animate__animated animate__fadeIn">
     <header class="l-header">
