--- a/details.html
+++ b/details.html
@@ -30,7 +30,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Rainy Days</title>
+    <title>Recipes</title>
   </head>
   <body>
     <header class="l-header">
