added image top homepage

--- a/about.html
+++ b/about.html
@@ -54,36 +54,42 @@
     </header>
     <main class="l-main">
       <hr class="line" />
+      <img
+        class="about-image"
+        src="/assets/dane-deaner-1WFXk3WJXZU-unsplash.jpg"
+      />
       <h2>ABOUT OUR BLOG</h2>
       <div class="about-info">
-        <p>
-          Welcome to my food blog, where I share my love for cooking and all
-          things food-related. My name is Mikaela, and I am passionate about
-          creating delicious, healthy meals that nourish both the body and the
-          soul. In this blog, you will find a variety of recipes that range from
-          classic comfort foods to more exotic dishes inspired by my travels
-          around the world.
-        </p>
-        <p>
-          Whether you're a seasoned chef or a beginner in the kitchen, there is
-          something for everyone to enjoy here. One of my favorite things about
-          cooking is the ability to experiment with different ingredients and
-          flavors. I am always on the lookout for new and interesting
-          ingredients to incorporate into my recipes, and I love sharing my
-          discoveries with my readers.
-        </p>
-        <p>
-          In addition to sharing recipes, I also like to provide tips and tricks
-          for making cooking easier and more enjoyable. From kitchen hacks to
-          meal planning advice, I hope to help my readers become more confident
-          and skilled cooks. Of course, no food blog would be complete without
-          beautiful food photography. I take great pride in styling and
-          photographing my dishes to make them as visually appealing as they are
-          delicious. So whether you're looking for a new recipe to try out, or
-          simply want to drool over some mouth-watering food photography, I
-          invite you to join me on my culinary journey. Thank you for visiting,
-          and happy cooking!
-        </p>
+        <div class="all-info">
+          <p>
+            Welcome to my food blog, where I share my love for cooking and all
+            things food-related. My name is Mikaela, and I am passionate about
+            creating delicious, healthy meals that nourish both the body and the
+            soul. In this blog, you will find a variety of recipes that range
+            from classic comfort foods to more exotic dishes inspired by my
+            travels around the world.
+          </p>
+          <p>
+            Whether you're a seasoned chef or a beginner in the kitchen, there
+            is something for everyone to enjoy here. One of my favorite things
+            about cooking is the ability to experiment with different
+            ingredients and flavors. I am always on the lookout for new and
+            interesting ingredients to incorporate into my recipes, and I love
+            sharing my discoveries with my readers.
+          </p>
+          <p>
+            In addition to sharing recipes, I also like to provide tips and
+            tricks for making cooking easier and more enjoyable. From kitchen
+            hacks to meal planning advice, I hope to help my readers become more
+            confident and skilled cooks. Of course, no food blog would be
+            complete without beautiful food photography. I take great pride in
+            styling and photographing my dishes to make them as visually
+            appealing as they are delicious. So whether you're looking for a new
+            recipe to try out, or simply want to drool over some mouth-watering
+            food photography, I invite you to join me on my culinary journey.
+            Thank you for visiting, and happy cooking!
+          </p>
+        </div>
       </div>
     </main>
     <footer>
