added more cards to homepage

--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
       <div class="main-list">
         <nav>
           <ul>
-            <li><a href="#">Recipes</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="blog.html">Recipes</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="index.html">Home Page</a></li>
           </ul>
         </nav>
@@ -54,10 +54,12 @@
     </header>
     <main class="l-main">
       <hr class="line" />
-      <img
-        class="about-image"
-        src="/assets/dane-deaner-1WFXk3WJXZU-unsplash.jpg"
-      />
+      <div class="aboutpage-image">
+        <img
+          class="about-image"
+          src="/assets/dane-deaner-1WFXk3WJXZU-unsplash.jpg"
+        />
+      </div>
       <h2>ABOUT OUR BLOG</h2>
       <div class="about-info">
         <div class="all-info">
