--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <hr class="line" />
     </header>
     <main class="l-main">
+      <h1 class="title-main">NEW RECIPES</h1>
       <div class="top-header-image">
         <img class="top-image" src="/assets/Group 64.png" />
       </div>
@@ -219,6 +220,33 @@
       <hr class="line2" />
       <div class="collage-img">
         <img src="/assets/Group 62.png" />
+      </div>
+      <hr class="line2" />
+      <h1 class="title-main">EXPLORE DESSERTS</h1>
+      <div class="food-list">
+        <ul>
+          <li><a href="blog.html">DESSERTS</a></li>
+          <li><a href="blog.html">DINNER</a></li>
+          <li><a href="blogt.html">LUNCH</a></li>
+        </ul>
+      </div>
+      <div class="dessert-cards">
+        <div class="dessert-card">
+          <img src="assets/milkshake.jpg" alt="Card Image" />
+          <h2>Oreo Milkshake</h2>
+        </div>
+        <div class="dessert-card">
+          <img src="assets/cupcake.jpg" alt="Card Image" />
+          <h2>Almond Cupcake</h2>
+        </div>
+        <div class="dessert-card">
+          <img src="assets/cake.jpg" alt="Card Image" />
+          <h2>Lava Cake</h2>
+        </div>
+        <div class="dessert-card">
+          <img src="assets/waffle.jpg" alt="Card Image" />
+          <h2>Belgian Waffles</h2>
+        </div>
       </div>
       <hr class="line2" />
     </main>
