--- a/blog.html
+++ b/blog.html
@@ -47,8 +47,8 @@
       <div class="main-list">
         <nav>
           <ul>
-            <li><a href="#">Recipes</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="blog.html">Recipes</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="index.html">Home Page</a></li>
           </ul>
         </nav>
@@ -76,7 +76,7 @@
       </div>
       <ul class="list-footer">
         <li class="list-item"><a href="#">Services</a></li>
-        <li class="list-item"><a href="#">About</a></li>
+        <li class="list-item"><a href="about.html">About</a></li>
         <li class="list-item"><a href="#">Terms</a></li>
         <li class="list-item"><a href="#">Privacy Policy</a></li>
       </ul>
