--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
       <div class="main-list">
         <nav>
           <ul>
-            <li><a href="#">Recipes</a></li>
+            <li><a href="blog.html">Recipes</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="index.html">Home Page</a></li>
           </ul>
@@ -185,7 +185,7 @@
       </div>
       <ul class="list-footer">
         <li class="list-item"><a href="#">Services</a></li>
-        <li class="list-item"><a href="#">About</a></li>
+        <li class="list-item"><a href="about.html">About</a></li>
         <li class="list-item"><a href="#">Terms</a></li>
         <li class="list-item"><a href="#">Privacy Policy</a></li>
       </ul>
