--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,9 @@
       </div>
       <h1>My latest Blogposts</h1>
       <hr class="line-main" />
-      <section class="blog-section" id="blog-container"></section>
+      <div class="blogpage-cards">
+        <section class="blog-section" id="blog-container"></section>
+      </div>
     </main>
     <footer>
       <h2>NewsLetter</h2>
