--- a/index.html
+++ b/index.html
@@ -118,6 +118,25 @@
           <button class="card-slider-nav-btn next">Next</button>
         </div>
       </div>
+      <hr class="line" />
+      <div class="dessert-cards">
+        <div class="dessert-card">
+          <img src="assets/milkshake.jpg" alt="Card Image" />
+          <h2>Oreo Milkshake</h2>
+        </div>
+        <div class="dessert-card">
+          <img src="assets/cupcake.jpg" alt="Card Image" />
+          <h2>Almond Cupcake</h2>
+        </div>
+        <div class="dessert-card">
+          <img src="assets/cake.jpg" alt="Card Image" />
+          <h2>Lava Cake</h2>
+        </div>
+        <div class="dessert-card">
+          <img src="assets/waffle.jpg" alt="Card Image" />
+          <h2>Belgian Waffles</h2>
+        </div>
+      </div>
       <h1 class="header-main">Most Popular Recipes</h1>
       <hr class="line-main" />
       <div class="all-cards">
@@ -229,24 +248,6 @@
           <li><a href="blog.html">DINNER</a></li>
           <li><a href="blogt.html">LUNCH</a></li>
         </ul>
-      </div>
-      <div class="dessert-cards">
-        <div class="dessert-card">
-          <img src="assets/milkshake.jpg" alt="Card Image" />
-          <h2>Oreo Milkshake</h2>
-        </div>
-        <div class="dessert-card">
-          <img src="assets/cupcake.jpg" alt="Card Image" />
-          <h2>Almond Cupcake</h2>
-        </div>
-        <div class="dessert-card">
-          <img src="assets/cake.jpg" alt="Card Image" />
-          <h2>Lava Cake</h2>
-        </div>
-        <div class="dessert-card">
-          <img src="assets/waffle.jpg" alt="Card Image" />
-          <h2>Belgian Waffles</h2>
-        </div>
       </div>
       <hr class="line2" />
     </main>
