--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,10 @@
       </div>
       <h1>My latest Blogposts</h1>
       <hr class="line-main" />
+      <div class="blog-allcards">
       <section class="blog-section" id="blog-container"></section>
+    </div>
+  </div>
     </main>
     <footer>
       <h2>NewsLetter</h2>
@@ -73,7 +76,7 @@
         ><a href="#"><i class="icon ion-social-snapchat"></i></a
         ><a href="#"><i class="icon ion-social-twitter"></i></a
         ><a href="#"><i class="icon ion-social-facebook"></i></a>
-      </div>
+      
       <ul class="list-footer">
         <li class="list-item"><a href="#">Services</a></li>
         <li class="list-item"><a href="about.html">About</a></li>
