--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="name"
+                  id="js-name"
                   placeholder="NAME"
                   name="name"
                   value=""
@@ -79,7 +79,7 @@
                 <input
                   type="email"
                   class="form-control"
-                  id="email"
+                  id="js-email"
                   placeholder="EMAIL"
                   name="email"
                   value=""
