--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,22 @@
     />
     <script type="module" defer src="/js/menu.js"></script>
     <script type="module" defer src="/js/blog.js"></script>
+    <!-- Hotjar Tracking Code for Mikaela Exam -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3505645, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
     <!-- TODO: Import Javascript -->
     <title>Blog Page</title>
   </head>
