--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
     <script type="module" defer src="/js/toggle.js"></script>
 
     <title>Blog for foodies</title>
+    <!-- Hotjar Tracking Code for Mikaela Exam -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3505645, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body class="animate__animated animate__fadeIn">
     <header class="l-header">
