--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
             <li><a href="blog.html">Recipes</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="index.html">Home Page</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
         </nav>
       </div>
