--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
             <li><a href="blog.html">Recipes</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="index.html">Home Page</a></li>
+            <li><a href="about.html">About Us</a></li>
           </ul>
         </nav>
       </div>
