--- a/details.html
+++ b/details.html
@@ -57,6 +57,7 @@
             <li><a href="#">Recipes</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="index.html">Home Page</a></li>
+            <li><a href="about.html">About Us</a></li>
           </ul>
         </nav>
       </div>
