--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
             <li><a href="blog.html">Recipes</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="index.html">Home Page</a></li>
-            <li><a href="abou.html">About Us</a></li>
+            <li><a href="about.html">About Us</a></li>
           </ul>
         </nav>
       </div>
