--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <ul>
           <li><a href="blog.html">DESSERTS</a></li>
           <li><a href="blog.html">DINNER</a></li>
-          <li><a href="blogt.html">LUNCH</a></li>
+          <li><a href="blog.html">LUNCH</a></li>
         </ul>
       </div>
       <div class="dessert-cards">
