--- a/about.html
+++ b/about.html
@@ -60,22 +60,22 @@
       <div class="main-list">
         <nav>
           <ul>
+            <li><a href="index.html">Home Page</a></li>
             <li><a href="blog.html">Recipes</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="index.html">Home Page</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main class="l-main">
-      <hr class="line" />
       <div class="aboutpage-image">
         <img
           class="about-image"
           src="/assets/dane-deaner-1WFXk3WJXZU-unsplash.jpg"
         />
       </div>
+      <hr class="line3" />
       <h2>ABOUT OUR BLOG</h2>
       <div class="about-info">
         <div class="all-info">
@@ -108,6 +108,7 @@
             Thank you for visiting, and happy cooking!
           </p>
         </div>
+        <hr class="line3" />
       </div>
     </main>
     <footer>
