--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,9 @@
       <div class="main-list">
         <nav>
           <ul>
+            <li><a href="index.html">Home Page</a></li>
             <li><a href="blog.html">Recipes</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="index.html">Home Page</a></li>
             <li><a href="about.html">About Us</a></li>
           </ul>
         </nav>
@@ -104,8 +104,7 @@
               <p class="validationerror" id="dateerrormsg">
                 Please enter a valid birth date.
               </p>
-
-              <button type="submit">Submit</button>
+              <button class="contact-button" type="submit">Submit</button>
             </form>
           </div>
         </div>
