added view more to the blog page

--- a/blog.html
+++ b/blog.html
@@ -78,6 +78,9 @@
       <h1>My latest Blogposts</h1>
       <hr class="line-main" />
       <div class="blog-section" id="blog-container"></div>
+      <div class="loading-buttons">
+        <button id="more-button">View More</button>
+      </div>
     </main>
     <footer>
       <h2>NewsLetter</h2>
