changed font size

--- a/contact.html
+++ b/contact.html
@@ -95,6 +95,9 @@
 
               <label for="subject">Subject:</label>
               <input type="text" id="js-subject" name="subject" />
+              <p class="validationerror" id="subejcterrormsg">
+                Must be more than 15 characters
+              </p>
 
               <label for="message">Message:</label>
               <textarea id="js-message" name="message" rows="4"></textarea>
